added KNN anomaly search code

--- a/sycorax_search/sycorax_gmm_search.ipynb
+++ b/sycorax_search/sycorax_gmm_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c874b10b",
    "metadata": {},
    "outputs": [],
@@ -13,25 +13,30 @@
     "import numpy as np\n",
     "import pylab as plt\n",
     "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.mixture import GaussianMixture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2f50c7c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "## load in the data, created using prep_csv.py\n",
     "infile_name = '/home/ellie/research/lsst/LSST_sim.csv'\n",
-    "df_initial = pd.read_csv(infile_name)"
+    "df_initial = pd.read_csv(infile_name)\n",
+    "\n",
+    "## initialize name of file to save model to\n",
+    "gmm_fname = \"/home/ellie/research/lsst/gmm.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f8040b6e",
    "metadata": {},
    "outputs": [],
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "9fb2a2e7",
    "metadata": {},
    "outputs": [
@@ -468,7 +473,7 @@
        "GaussianMixture(max_iter=1000, n_components=71)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,12 +488,27 @@
     "gmm = GaussianMixture(n_components, covariance_type='full', max_iter=1000)\n",
     "\n",
     "## fit the Gaussian mixture model\n",
-    "gmm.fit(norm_data)"
+    "gmm.fit(norm_data)\n",
+    "\n",
+    "# save the GMM to file\n",
+    "joblib.dump(gmm, gmm_fname) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "02b9845b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## If you don't want to refit the GMM, you can load a previously-saved one here:\n",
+    "\n",
+    "gmm = joblib.load(gmm_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "435c3882",
    "metadata": {},
    "outputs": [],
@@ -515,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "21417a45",
    "metadata": {
     "scrolled": true
@@ -525,28 +545,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "457976    29138212465844254\n",
-      "458001    29138212465844254\n",
-      "457669    29138212465844254\n",
-      "457277    29138212465844254\n",
-      "457788    29138212465844254\n",
-      "457593    29138212465844254\n",
-      "458341    29138212465844254\n",
-      "458295    29138212465844254\n",
-      "457287    29138212465844254\n",
-      "457846    29138212465844254\n",
+      "429524    14058614664327135\n",
+      "319322    10769462475109257\n",
+      "9126       2026069171332162\n",
+      "199461     7158623547316216\n",
+      "380502    12524061909844359\n",
+      "312089    10522855722267618\n",
+      "92585      4215512993465156\n",
+      "466918    15211315959497349\n",
+      "38763      2843930780133498\n",
+      "183911     6755247807656121\n",
       "Name: ssObjectId, dtype: int64\n",
-      "457976    2011 S100dloka\n",
-      "458001    2011 S100dloka\n",
-      "457669    2011 S100dloka\n",
-      "457277    2011 S100dloka\n",
-      "457788    2011 S100dloka\n",
-      "457593    2011 S100dloka\n",
-      "458341    2011 S100dloka\n",
-      "458295    2011 S100dloka\n",
-      "457287    2011 S100dloka\n",
-      "457846    2011 S100dloka\n",
-      "Name: fullDesignation, dtype: object\n"
+      "429524    31.591381\n",
+      "319322    30.608335\n",
+      "9126      29.537883\n",
+      "199461    27.987511\n",
+      "380502    27.303405\n",
+      "312089    27.164526\n",
+      "92585     26.051123\n",
+      "466918    25.867202\n",
+      "38763     25.726945\n",
+      "183911    25.399537\n",
+      "Name: log_likelihood, dtype: float64\n",
+      "ssObjectId          1.405861e+16\n",
+      "incl                9.872400e+00\n",
+      "e                   1.871576e-02\n",
+      "q                   5.064709e+00\n",
+      "mpcH                1.586000e+01\n",
+      "g_H                 1.637564e+01\n",
+      "r_H                 1.590661e+01\n",
+      "i_H                 1.584345e+01\n",
+      "z_H                 1.576369e+01\n",
+      "u_H                          NaN\n",
+      "y_H                          NaN\n",
+      "heliocentricDist    5.272369e+00\n",
+      "heliocentricVX      6.945611e-03\n",
+      "heliocentricVY     -2.078919e-03\n",
+      "heliocentricVZ     -2.064220e-03\n",
+      "a                   5.161307e+00\n",
+      "sini                1.714545e-01\n",
+      "i-z                 7.976400e-02\n",
+      "a*                 -1.241377e-01\n",
+      "v                   7.538198e-03\n",
+      "vk                  7.410632e-03\n",
+      "v-vk                1.275657e-04\n",
+      "diffv/r             2.419514e-05\n",
+      "r                   5.272369e+00\n",
+      "Name: 429524, dtype: float64\n"
      ]
     }
    ],
@@ -554,16 +599,25 @@
     "## sort the simulation samples from highest to lowest log likelihood scores\n",
     "df_sorted = df.sort_values(by='log_likelihood', ascending=False) \n",
     "\n",
-    "# create a new dataframe containing only the rows with the top 10 highest log likelihood scores\n",
-    "highest_ll_df = df_sorted.head(10)\n",
+    "## retrieve the indices of each sample, in a list where the indices are sorted from those\n",
+    "## corresponding to the sample with the highest log likelihood scores to the lowest \n",
+    "indices = df_sorted.index.to_list() #retrieve indices of each sample\n",
     "\n",
-    "#print(top_10_most_outlying)\n",
-    "indices = highest_ll_df.index.to_list() #retrieve indices of top 10 outliers\n",
-    "top10outliers = df_initial.loc[indices] \n",
+    "# get the sorted version of the dataframe with *all* of the fields, not just the subset fields\n",
+    "df_full_table_sorted = df_initial.loc[indices] \n",
     "\n",
-    "print(top10outliers['ssObjectId'])\n",
+    "#drop duplicate \"observations\" of same object\n",
+    "df_full_table_sorted = df_full_table_sorted.drop_duplicates(subset='ssObjectId', keep='first')\n",
     "\n",
-    "print(top10outliers['fullDesignation'])"
+    "#select and print the top 10 most anomalous objects\n",
+    "top_10 = df_full_table_sorted.head(10)\n",
+    "print(top_10['ssObjectId'])\n",
+    "\n",
+    "# print the log likelihood scores for the top 10 anomalies\n",
+    "top10_indices = top_10.index.to_list()\n",
+    "print(df_sorted.loc[top10_indices]['log_likelihood'])\n",
+    "\n",
+    "print(df_full_table_sorted.loc[429524])"
    ]
   },
   {
