small tweaks to test_linkage notebook

--- a/nongrav/test_linking/test_linkage.ipynb
+++ b/nongrav/test_linking/test_linkage.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "## generate Physical Parameters file using placeholder values\n",
-    "## (these are not the correct values for Ceres, need to correct)\n",
+    "## (these are not the correct values, need to fix)\n",
     "\n",
     "df_phy = pd.DataFrame()\n",
     "df_phy['ObjID'] = [obj_id]\n",
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "id": "9fc9a72c-6279-4f56-b337-edb29f1e84f9",
    "metadata": {},
    "outputs": [
