recent changes to notebooks

--- a/nongrav/test_linking/test_linkage.ipynb
+++ b/nongrav/test_linking/test_linkage.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6d1b5e8e-fccc-474a-80aa-653b385a5450",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "b4549fca-ce75-41a9-8ff8-ae964a805836",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "baf21449-8b58-4b98-a990-e38474fd831c",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e14cf0c5-55be-44db-ae52-ef042ffe4aa2",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "9d5e991d-b14f-4019-862f-bc331c9623c3",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e11621d8-6ba1-40c1-968e-24b5ad8d532c",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "CompletedProcess(args=['sorcha', 'run', '-c', 'Rubin_full_footprint.ini', '-p', 'pratchett_phy.csv', '--orbits', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pratchett_orb_cart.csv', '--pd', '/home/ellie/src/sorcha/sorcha/demo/baseline_v2.0_1yr.db', '-o', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/', '-t', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pratchett_cart', '--st', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pratchett_cart_stats'], returncode=0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "2a12097c-ddfa-4864-9e75-7e9f3ea26927",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "c8ce7d24-8f7f-4acc-8f02-86b9df297bcb",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "d56dabb3-e3a5-46f8-945c-06d37855c481",
    "metadata": {},
    "outputs": [
@@ -358,41 +358,41 @@
       "Sanity-check finished\n",
       "make_tracklets is sanity-checking indvecs\n",
       "Sanity-check finished\n",
-      "3 overlapping images found for image 0; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 0; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 1; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 1; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 2; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 2; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 3; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 3; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "0 overlapping images found for image 4; current time is Fri Jan 16 16:30:15 2026\n",
+      "0 overlapping images found for image 4; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "1 overlapping images found for image 5; current time is Fri Jan 16 16:30:15 2026\n",
+      "1 overlapping images found for image 5; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "1 overlapping images found for image 6; current time is Fri Jan 16 16:30:15 2026\n",
+      "1 overlapping images found for image 6; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "0 overlapping images found for image 7; current time is Fri Jan 16 16:30:15 2026\n",
+      "0 overlapping images found for image 7; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "2 overlapping images found for image 8; current time is Fri Jan 16 16:30:15 2026\n",
+      "2 overlapping images found for image 8; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "2 overlapping images found for image 9; current time is Fri Jan 16 16:30:15 2026\n",
+      "2 overlapping images found for image 9; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "2 overlapping images found for image 10; current time is Fri Jan 16 16:30:15 2026\n",
+      "2 overlapping images found for image 10; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "0 overlapping images found for image 11; current time is Fri Jan 16 16:30:15 2026\n",
+      "0 overlapping images found for image 11; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 12; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 12; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 13; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 13; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 14; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 14; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "3 overlapping images found for image 15; current time is Fri Jan 16 16:30:15 2026\n",
+      "3 overlapping images found for image 15; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "1 overlapping images found for image 16; current time is Fri Jan 16 16:30:15 2026\n",
+      "1 overlapping images found for image 16; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
-      "1 overlapping images found for image 17; current time is Fri Jan 16 16:30:15 2026\n",
+      "1 overlapping images found for image 17; current time is Fri Jan 16 20:54:30 2026\n",
       "\n",
       "merge_pairs is sanity-checking indvecs\n",
       "Sanity-check finished\n",
@@ -409,7 +409,7 @@
        "CompletedProcess(args=['make_tracklets', '-dets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pratchett_30days_cmi.csv', '-earth', '/home/ellie/research/lsst/heliolinc_files/Earth1day2020s_02a.csv', '-obscode', '/home/ellie/research/lsst/heliolinc_files/ObsCodes.html', '-colformat', '/home/ellie/research/lsst/heliolinc_files/colformat.txt', '-outimgs', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/outim_pratchett_cart.txt', '-pairdets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pairdets_pratchett_cart.csv', '-tracklets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/tracklets_pratchett_cart.csv', '-trk2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/trk2det_pratchett_cart.csv'], returncode=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "b6822c45-1d5d-41b7-ac5b-a9e0e53ab414",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,24 @@
       "Geocentric distance step 5, bin-center distance is 0.51 AU\n",
       "KDRclust_6i01 finished clustering geobin 5, with 0 = 0 clusters found\n",
       "Final analysis of geobin 5 identified 0 distinct candidate linkages. Current total is 0\n",
-      "Geocentric distance step 6, bin-center distance is 0.76 AU\n",
+      "Geo"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['heliolinc', '-imgs', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/outim_pratchett_cart.txt', '-pairdets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pairdets_pratchett_cart.csv', '-tracklets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/tracklets_pratchett_cart.csv', '-trk2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/trk2det_pratchett_cart.csv', '-obspos', '/home/ellie/research/lsst/heliolinc_files/Earth1day2020s_02a.csv', '-heliodist', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/hihyp00b_mb.txt', '-outsum', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/sum_pratchett_cart.csv', '-clust2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/clust2det_pratchett_cart.csv'], returncode=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "centric distance step 6, bin-center distance is 0.76 AU\n",
       "KDRclust_6i01 finished clustering geobin 6, with 0 = 0 clusters found\n",
       "Final analysis of geobin 6 identified 0 distinct candidate linkages. Current total is 0\n",
       "Geocentric distance step 7, bin-center distance is 1.14 AU\n",
@@ -1550,24 +1567,7 @@
       "Working on hypothesis 80: 6.21 AU, -11.27 km/sec 0.44 GMsun/r^2\n",
       "Working on hypothesis 81: 6.21 AU, 0.00 km/sec 0.00 GMsun/r^2\n",
       "Working on hypothesis 82: 6.21 AU, 11.27 km/sec 0.44 GMsun/r^2\n",
-      "Working on hypothesis 83: 6.51"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['heliolinc', '-imgs', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/outim_pratchett_cart.txt', '-pairdets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pairdets_pratchett_cart.csv', '-tracklets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/tracklets_pratchett_cart.csv', '-trk2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/trk2det_pratchett_cart.csv', '-obspos', '/home/ellie/research/lsst/heliolinc_files/Earth1day2020s_02a.csv', '-heliodist', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/hihyp00b_mb.txt', '-outsum', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/sum_pratchett_cart.csv', '-clust2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/clust2det_pratchett_cart.csv'], returncode=0)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " AU, -11.01 km/sec 0.44 GMsun/r^2\n",
+      "Working on hypothesis 83: 6.51 AU, -11.01 km/sec 0.44 GMsun/r^2\n",
       "Working on hypothesis 84: 6.51 AU, 0.00 km/sec 0.00 GMsun/r^2\n",
       "Working on hypothesis 85: 6.51 AU, 11.01 km/sec 0.44 GMsun/r^2\n",
       "Working on hypothesis 86: 6.81 AU, -10.76 km/sec 0.44 GMsun/r^2\n",
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "9b5d3ca1-657a-44b5-a355-aeea790c0ab3",
    "metadata": {},
    "outputs": [],
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "88670be8-1fca-4e1d-ad14-0e242a02ca48",
    "metadata": {},
    "outputs": [
@@ -1713,11 +1713,12 @@
       "The total timespan will be raised to the power of 0,\n",
       "and the astrometric RMS will be raised to the power of (negative) 2\n",
       "Duplicate-culled cluster summary vector has length 1,\n",
-      "Fitting cluster 0 of 1:  astromrms = 0.00843587 arcsec, dup=0\n",
+      "Fitting cluster 0 of 1:  astromrms = 0.0125635 arcsec, dup=0\n",
       "Writing out good cluster 0\n",
       "Finished loading input clusters: 1 out of 1 passed initial screening.\n",
-      "Accepted good cluster 1 with metric 337250\n",
-      "Writing 1 lines to output cluster-summary file /home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLsum_pratche"
+      "Accepted good cluster 1 with metric 152051\n",
+      "Writing 1 lines to output cluster-summary file /home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLsum_pratchett_cart.csv\n",
+      "Writing 9 lines to output clust2det file /home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLclust2det_pratchett_cart.csv\n"
      ]
     },
     {
@@ -1726,17 +1727,9 @@
        "CompletedProcess(args=['link_purify', '-imgs', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/outim_pratchett_cart.txt', '-pairdets', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pairdets_pratchett_cart.csv', '-lflist', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/pratchett_cart_lflist', '-outsum', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLsum_pratchett_cart.csv', '-clust2det', '/home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLclust2det_pratchett_cart.csv'], returncode=0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tt_cart.csv\n",
-      "Writing 9 lines to output clust2det file /home/ellie/research/lsst/sorcha_output/127005pratchett_new/LPLclust2det_pratchett_cart.csv\n"
-     ]
     }
    ],
    "source": [
@@ -1751,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "9fc9a72c-6279-4f56-b337-edb29f1e84f9",
    "metadata": {},
    "outputs": [
