updates to notebooks

--- a/nongrav/test_linking/test_linkage_1obj.ipynb
+++ b/nongrav/test_linking/test_linkage_1obj.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "6d1b5e8e-fccc-474a-80aa-653b385a5450",
    "metadata": {},
    "outputs": [],
@@ -183,11 +183,11 @@
     "df_phy = pd.DataFrame()\n",
     "df_phy['ObjID'] = [obj_id]\n",
     "df_phy['H_r'] = [5.63]\n",
-    "df_phy['u-r'] = [2.55]\n",
-    "df_phy['g-r'] = [0.92]\n",
-    "df_phy['i-r'] = [-0.38]\n",
-    "df_phy['z-r'] = [-0.59]\n",
-    "df_phy['y-r'] = [-0.70]\n",
+    "df_phy['u-r'] = [1.508064] #[2.55]\n",
+    "df_phy['g-r'] = [0.293132] #[0.92]\n",
+    "df_phy['i-r'] = [-0.292761] #[-0.38]\n",
+    "df_phy['z-r'] = [-0.298066] #[-0.59]\n",
+    "df_phy['y-r'] = [0.302652] #[-0.70]\n",
     "df_phy['GS'] = [0.15]\n",
     "\n",
     "df_phy.to_csv(\"{0}{1}_phy.csv\".format(sfpath, fname_stem), index=False)"
