--- a/sycorax_search/mpc_analysis.ipynb
+++ b/sycorax_search/mpc_analysis.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ad8217f-0a78-4e43-a802-7ef2da5ab099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bigjson'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#import bigjson\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgc\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmpc_preprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_mpcorb\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmpc_preprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_MPCephem\n",
+      "File \u001b[0;32m~/research/lsst/lsst_seti/sycorax_search/mpc_preprocessing.py:8\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m''' The purpose of this program is to read in data from the\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;03m    extended MPC ORB table, downloaded from minorplanetcenter.org.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    ~ MEW, 6 July 2025 \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbigjson\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mastroquery\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmpc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MPC\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bigjson'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pylab as plt\n",
@@ -2787,7 +2800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
